# Decision-Shelf

./: .env.example  .gitignore  README.md  desktop_entry.py  pyproject.toml
.github/workflows/: desktop-release.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
decision_shelf/: __init__.py  api_schemas.py  app_paths.py  backup.py  cli.py  csv_import.py  database.py  deepseek.py  desktop.py  engine.py  mobile.py  models.py  seed.py  settings.py  taxonomy.py  theme_color.py  utils.py  webapp.py  workflows.py
decision_shelf/metadata/: __init__.py  base.py  providers.py  service.py
docs/: ANDROID.md  DESKTOP_RELEASE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  api.ts  router.test.ts  router.ts  shelfLayout.test.ts  shelfLayout.ts  style.css  types.ts
frontend/src/components/: BatchImport.test.ts  BatchImport.vue  CardTile.test.ts  CardTile.vue  CompletedCollection.test.ts  CompletedCollection.vue  CompletionDialog.test.ts  CompletionDialog.vue  DraftForm.test.ts  DraftForm.vue
frontend/src/views/: AddView.test.ts  (+8 more)
packaging/: decision_shelf_windows.spec  setup_macos.py
scripts/: build_android.ps1  build_icons.py  build_macos.sh  build_windows.ps1  init_android_signing.ps1
tests/: test_api.py  test_backup.py  test_csv_import.py  test_deepseek.py  test_engine.py  test_metadata.py  test_migration.py  test_settings.py  test_theme_color.py  test_workflows.py
(+8 files in other folders)
