[project]
name = "decision-shelf"
version = "0.3.1"
description = "A local, explainable decision shelf with web metadata discovery"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "pydantic>=1.10,<3",
    "uvicorn>=0.34,<1",
    "Pillow>=10,<12",
]

[project.scripts]
decision-shelf = "decision_shelf.cli:main"

[tool.unittest]
start-directory = "tests"
