[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-shelf"
version = "0.3.1"
description = "A local, explainable decision shelf with web metadata discovery"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "pydantic>=1.10,<3",
    "uvicorn>=0.34,<1",
    "Pillow>=10,<12",
    "keyring>=25,<26",
]

[project.scripts]
decision-shelf = "decision_shelf.cli:main"
decision-shelf-desktop = "decision_shelf.desktop:main"

[project.optional-dependencies]
desktop = [
    "pywebview>=5,<7",
    "pyinstaller>=6,<7; sys_platform == 'win32'",
    "py2app>=0.28,<1; sys_platform == 'darwin'",
]

[tool.unittest]
start-directory = "tests"

[tool.setuptools.packages.find]
include = ["decision_shelf*"]
exclude = ["data*", "frontend*", "packaging*", "tests*"]
